update some files

--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,7 +1,7 @@
 {
     "apps": [
         {
-            "name": "helpdesk",
+            "name": "NSA",
             "script": "artisan",
             "args": [
                 "serve",
