--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=6501c2760470eb027746657c7c05ab60",
-    "/css/app.css": "/css/app.css?id=ffb1e6f7cb5abd63af2e5b96ffbd3220",
-    "/installer/css/style.css": "/installer/css/style.css?id=938dab78a6a68f1dae566c1a03a734f9"
+    "/js/app.js": "/js/app.js?id=9a002685031d74cf9d8282c91dc14669",
+    "/css/app.css": "/css/app.css?id=a146026ec4f803fef354e54b8780e823"
 }
